--- a/index.html
+++ b/index.html
@@ -131,15 +131,15 @@ href= "myStyles.css"> -->
     <center><h2><p style="color: rgb(42,91,134);font-size: 35px;">Portfolio</h2>
 
     <center><p><a href = "https://norcalcrew.org/" target="_blank">NorCal Crew</a><p>
-      <p>description<p>
+      <p>I began rowing for NorCal crew in seventh grade and rose to the varsity level in ninth grade.<p>
     <center><p><a href = "https://thecampanile.org/author/kianatavakoli/" target="_blank">The Campanile</a><p>
-      <p>description<p>
+      <p>The Campanile is Palo Alto high school's student-run newspaper. I currently manage financial aspects of the publication through the role of business manager.<p>
     <center><p><a href = "https://girlswhocode.com/" target="_blank">Girls Who Code</a><p>
-      <p>description<p>
+      <p>Through this seven week immersion program, I learned several computer science skills such as Python, Javascript and app development.<p>
     <center><p><a href = "https://www.dreamcatchersyouth.org/" target="_blank">Dreamcatchers</a><p>
-      <p>description<p>
+      <p>Dreamcatchers is a nonprofit that aims help to close the achievement gap in the Palo Alto area through peer tutoring. I tutor local middle school students throughout the year and began interning over the summer. The summer internship involved using Salesforce and quickbooks<p>
     <center><p><a href = "https://yogasource.com/" target="_blank">YogaSource</a><p>
-      <p>description<p>
+      <p>I love yoga! I currently volunteer at the front desk at YogaSource. I began practicing as a supplement to competative rowing, but became passionate about it after enduring major surgery after which I was unable to row for four months.<p>
     <center><div>
 
     <center><h2><p style="color: rgb(42,91,134);font-size: 35px;">Resume</h2>
