Attempt to add responsive quality to images

--- a/index.html
+++ b/index.html
@@ -33,6 +33,12 @@ href= "myStyles.css"> -->
 
   <head>
 
+    <style>
+    img {
+      max-width: 100%;
+      height: auto;
+    }
+    </style>
 
     <script src= "jscript.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
