--- a/index.html
+++ b/index.html
@@ -198,7 +198,8 @@ href= "myStyles.css"> -->
           });
         </script> -->
  <p>
- <button onclick="panHome()">London</button>
+ <!-- <button onclick="panHome()">London</button> -->
+ <button onclick="flyToLondon()">Fly to London</button>
  <button onclick="goToPhilz()">Philz</button>
  <button onclick="goToBiac()">BIAC</button>
  <button onclick="goToStanfordOval()">Stanford Oval</button>
